fixed white space

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,13 @@
 /* .front-page.animateMe{
 	animation: flip-page 2s linear 1s forwards;
 } */
+
 #background{
 	z-index: -1
 }
 .container-fluid{
 	height: 100vh;
+	overflow-x: hidden
 }
 .front-page-content{
 	background-position: fixed
@@ -75,7 +77,7 @@ a{
 	/* backdrop-filter: blur(10px) */
 }
 .about-container.animateMe{
-	animation: Fade 2s linear 1s forwards;
+	animation: Fade .5s linear 1s forwards;
 }
 @keyframes Fade {
 	0% {opacity: 0;}
@@ -99,6 +101,10 @@ a{
 	filter: blur(5px)
 	/* background: rgb(90, 168, 101); */
 	position: relative;
+	opacity: 0;
+}
+.trip-container.animateMe{
+	animation: Fade 4s linear 1s forwards;
 }
 h3{
 	/* color: white; */
